--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "1.0.5",
+    "@radix-ui/react-toggle": "^1.0.2",
     "autoprefixer": "10.4.14",
     "date-fns": "^2.29.3",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
+    "lodash": "^4.17.21",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
