--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
+    "firebaseui": "^6.0.2",
     "lodash": "^4.17.21",
     "next": "13.3.0",
     "postcss": "8.4.21",
